fix(r&w): smaller row-gap for small thumbnails in "more" section

--- a/site/gdocs/components/ResearchAndWriting.scss
+++ b/site/gdocs/components/ResearchAndWriting.scss
@@ -20,19 +20,18 @@ $rw-margin-bottom-grid-cell: 4px;
     color: $blue-50;
 }
 
-.research-and-writing-link__title {
-    margin-top: 0;
-    margin-bottom: $rw-margin-bottom-grid-cell;
-}
-
 .research-and-writing-row__links {
-    row-gap: 32px - $rw-margin-bottom-grid-cell;
+    row-gap: 40px - $rw-margin-bottom-grid-cell;
 
     @include sm-only {
         display: flex;
         overflow-x: auto;
         scrollbar-width: thin;
     }
+}
+
+.research-and-writing-row__links--condensed {
+    row-gap: 32px - $rw-margin-bottom-grid-cell;
 }
 
 .research-and-writing-link {
@@ -66,6 +65,11 @@ $rw-margin-bottom-grid-cell: 4px;
         left: 0;
         top: 0;
     }
+}
+
+.research-and-writing-link__title {
+    margin-top: 0;
+    margin-bottom: $rw-margin-bottom-grid-cell;
 }
 
 .research-and-writing-link__description {
